--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "angular": "^1.3.15",
     "angular-ui-bootstrap": "^0.12.1",
     "angular-ui-router": "^0.2.14",
-    "bootstrap": "^3.3.4"
+    "bootstrap": "^3.3.4",
+    "jquery": "^2.1.4"
   }
 }
