--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "homepage": "https://github.com/rcgudey/UNO",
   "dependencies": {
-    "angular": "^1.3.15",
+    "angular": "^1.4.0-rc.1",
+    "angular-cookies": "^1.3.15",
     "angular-ui-bootstrap": "^0.12.1",
     "angular-ui-router": "^0.2.14",
     "bootstrap": "^3.3.4",
